...
    <string name="education_title_high_school">Bachillerato</string>
    <string name="education_title_college">Universidad</string>
    <string name="education_title_master">Maestría</string>
    <string name="education_title_doctoral">Doctorado</string>
    <string name="education_description_swipe">Desliza para más opciones</string>
    <!-- Login Errors -->
    <string name="error_mail">Parece que hubo un problema al intentar iniciar sesión.</string>
    <string name="error_facebook">Parece que hubo un problema al intentar iniciar sesión con Facebook.</string>
    <string name="error_google">Parece que hubo un problema al intentar iniciar sesión con Google.</string>

    <!-- ======================================================================================= -->
    <!-- Strings de las categorias -->
    <!-- ======================================================================================= -->
...

    <!-- ======================================================================================= -->
    <!-- General messages for NoticeDialog -->
    <!-- ======================================================================================= -->
    <!-- Error -->
    <string name="message_error">Parece que hubo un error\nLe he fallado, señor...\nusted confió en mi y yo le fallé.</string>
    <string name="message_emptyfields_error">¡Alto ahí, vaquero!\nNo puedes dejar campos vacíos.</string>
    <string name="message_connection_error">Parece que no tienes conexión.</string>
    <string name="message_max_apps_reached_error">Sólo puedes elegir 3 aplicaciones.\nConviertete en PREMIUM y podrás elegir cuantas aplicaciones quieras.</string>
    <string name="message_from_the_future_error">Tranquilo, Marty\nNo es posible que vengas\ndel futuro.</string>
    <string name="message_save_error">Hubo un error al intentar guardar.\n:(</string>
    <string name="message_set_photo_error">Hubo un error al intentar\nguardar la foto.\n:(</string>
    <string name="message_invalid_name">Escribe un nombre válido</string>
    <string name="message_invalid_password">La contraseña debe tener al menos 8 caracteres.</string>
    <string name="message_match_password_error">Las contraseñas no coinciden.</string>
    <string name="message_rejected_email">El correo no es válido o ya existe.</string>
    <!--Successed  -->
    <string name="message_login_success">Bienvenido\nTe enviamos un correo de confirmación a tu email.</string>
    <string name="message_save_success">Todo bien, todo correcto.</string>
    <string name="message_set_photo_success">¡No puede ser!\n¡Yo te ví en una pelicula!</string>

    <string name="message_save_question_success">Listo, tu pregunta se creó.</string>
    <string name="message_save_question_error">No se pudo crear la pregunta.</string>
    <string name="message_unselected_answer_warning">Elige al menos una respesta correcta.</string>
...
