<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="100dp"
    android:backgroundTint="@color/correctColor"
    android:background="@xml/background_top_normal_round"
    android:layout_gravity="bottom"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/notice_dialog_img_size"
        android:layout_height="@dimen/notice_dialog_img_size"
        app:srcCompat="@drawable/ic_successed"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/TV_Message"

        style="@style/NoticeDialog_image"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/TV_Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"

        style="@style/NoticeDialog_message"
        />
</androidx.constraintlayout.widget.ConstraintLayout>